--- a/package/crds/container.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/container.gcp.upbound.io_nodepools.yaml
@@ -303,6 +303,8 @@ spec:
                                 type: string
                               cpuManagerPolicy:
                                 type: string
+                              podPidsLimit:
+                                type: number
                             required:
                             - cpuManagerPolicy
                             type: object
