--- a/package/crds/cloudbuild.gcp.upbound.io_workerpools.yaml
+++ b/package/crds/cloudbuild.gcp.upbound.io_workerpools.yaml
@@ -88,6 +88,17 @@ spec:
                             {network} is the name of a VPC network in the project.
                             See (https://cloud.google.com/cloud-build/docs/custom-workers/set-up-custom-worker-pool-environment#understanding_the_network_configuration_options)
                           type: string
+                        peeredNetworkIpRange:
+                          description: Immutable. Subnet IP range within the peered
+                            network. This is specified in CIDR notation with a slash
+                            and the subnet prefix size. You can optionally specify
+                            an IP address before the subnet prefix value. e.g. 192.168.0.0/29
+                            would specify an IP range starting at 192.168.0.0 with
+                            a prefix size of 29 bits. /16 would specify a prefix size
+                            of 16 bits, with an automatically determined IP within
+                            the peered VPC. If unspecified, a value of /24 will be
+                            used.
+                          type: string
                         peeredNetworkRef:
                           description: Reference to a Network in compute to populate
                             peeredNetwork.
