--- a/package/crds/compute.gcp.upbound.io_externalvpngateways.yaml
+++ b/package/crds/compute.gcp.upbound.io_externalvpngateways.yaml
@@ -86,6 +86,11 @@ spec:
                           type: string
                       type: object
                     type: array
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels for the external VPN gateway resource.
+                    type: object
                   project:
                     description: The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
