--- a/package/crds/compute.gcp.upbound.io_networks.yaml
+++ b/package/crds/compute.gcp.upbound.io_networks.yaml
@@ -94,8 +94,13 @@ spec:
                       allocated from fd20::/20 and returned via this field.
                     type: string
                   mtu:
-                    description: Maximum Transmission Unit in bytes. The minimum value
-                      for this field is 1460 and the maximum value is 1500 bytes.
+                    description: Maximum Transmission Unit in bytes. The default value
+                      is 1460 bytes. The minimum value for this field is 1300 and
+                      the maximum value is 8896 bytes (jumbo frames). Note that packets
+                      larger than 1500 bytes (standard Ethernet) can be subject to
+                      TCP-MSS clamping or dropped with an ICMP Fragmentation-Needed
+                      message if the packets are routed to the Internet or other VPCs
+                      with varying MTUs.
                     type: number
                   project:
                     description: The ID of the project in which the resource belongs.
