modified provider config api
Signed-off-by: Brad Wadsworth <brad.wadsworth@mavenwave.com>

--- a/package/crds/gcp.upbound.io_providerconfigs.yaml
+++ b/package/crds/gcp.upbound.io_providerconfigs.yaml
@@ -71,7 +71,7 @@ spec:
                     - path
                     type: object
                   impersonateServiceAccount:
-                    description: GCP service account impersonation
+                    description: Use GCP service account impersonation for authentication.
                     properties:
                       name:
                         description: GCP service account email address
