--- a/package/crds/storage.gcp.upbound.io_notifications.yaml
+++ b/package/crds/storage.gcp.upbound.io_notifications.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
   name: notifications.storage.gcp.upbound.io
 spec:
@@ -68,7 +68,7 @@ spec:
                     description: The name of the bucket.
                     type: string
                   bucketRef:
-                    description: Reference to a Bucket to populate bucket.
+                    description: Reference to a Bucket in storage to populate bucket.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -102,7 +102,7 @@ spec:
                     - name
                     type: object
                   bucketSelector:
-                    description: Selector for a Bucket to populate bucket.
+                    description: Selector for a Bucket in storage to populate bucket.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
@@ -473,9 +473,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
