--- a/examples-generated/compute/sharedvpchostproject.yaml
+++ b/examples-generated/compute/sharedvpchostproject.yaml
@@ -42,3 +42,41 @@ spec:
 
 ---
 
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: SharedVPCServiceProject
+metadata:
+  annotations:
+    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
+  labels:
+    testing.upbound.io/example-name: service1
+  name: service1
+spec:
+  forProvider:
+    hostProjectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: host
+    serviceProjectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: SharedVPCServiceProject
+metadata:
+  annotations:
+    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
+  labels:
+    testing.upbound.io/example-name: service2
+  name: service2
+spec:
+  forProvider:
+    hostProjectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: host
+    serviceProjectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+
+---
+
