--- a/examples/bigtable/tableiammember.yaml
+++ b/examples/bigtable/tableiammember.yaml
@@ -1,8 +1,8 @@
 apiVersion: bigtable.gcp.upbound.io/v1beta1
-kind: TableIAMBinding
+kind: TableIAMMember
 metadata:
   annotations:
-    meta.upbound.io/example-id: bigtable/v1beta1/tableiambinding
+    meta.upbound.io/example-id: bigtable/v1beta1/tableiammember
   labels:
     testing.upbound.io/example-name: editor
   name: editor
@@ -11,8 +11,7 @@ spec:
     instance: instance
     role: roles/bigtable.user
     table: table
-    members:
-      - serviceAccount:official-provider-testing@official-provider-testing.iam.gserviceaccount.com
+    member: serviceAccount:${data.google_iam_member.member}
 
 ---
 
@@ -20,7 +19,7 @@ apiVersion: bigtable.gcp.upbound.io/v1beta1
 kind: Table
 metadata:
   annotations:
-    meta.upbound.io/example-id: bigtable/v1beta1/tableiambinding
+    meta.upbound.io/example-id: bigtable/v1beta1/tableiammember
   labels:
     testing.upbound.io/example-name: table
   name: table
@@ -40,7 +39,7 @@ apiVersion: bigtable.gcp.upbound.io/v1beta1
 kind: Instance
 metadata:
   annotations:
-    meta.upbound.io/example-id: bigtable/v1beta1/tableiambinding
+    meta.upbound.io/example-id: bigtable/v1beta1/tableiammember
   labels:
     testing.upbound.io/example-name: instance
   name: instance
