--- a/examples/bigtable/instanceiammember.yaml
+++ b/examples/bigtable/instanceiammember.yaml
@@ -1,8 +1,8 @@
 apiVersion: bigtable.gcp.upbound.io/v1beta1
-kind: InstanceIAMBinding
+kind: InstanceIAMMember
 metadata:
   annotations:
-    meta.upbound.io/example-id: bigtable/v1beta1/instanceiambinding
+    meta.upbound.io/example-id: bigtable/v1beta1/instanceiammember
   labels:
     testing.upbound.io/example-name: editor
   name: editor
@@ -10,8 +10,7 @@ spec:
   forProvider:
     instance: production-instance
     role: roles/bigtable.user
-    members:
-      - serviceAccount:official-provider-testing@official-provider-testing.iam.gserviceaccount.com
+    member: serviceAccount:official-provider-testing@official-provider-testing.iam.gserviceaccount.com
 
 ---
 
@@ -19,7 +18,7 @@ apiVersion: bigtable.gcp.upbound.io/v1beta1
 kind: Instance
 metadata:
   annotations:
-    meta.upbound.io/example-id: bigtable/v1beta1/instanceiambinding
+    meta.upbound.io/example-id: bigtable/v1beta1/instanceiammember
   labels:
     testing.upbound.io/example-name: production-instance
   name: production-instance
