Use ">= 0.0.0-0" as config dependency version constraint for prereleases
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -21,4 +21,4 @@ metadata:
 spec:
   dependsOn:
     - provider: {{ XPKG_REG_ORGS }}/provider-gcp-config
-      version: ">={{ VERSION }}"
+      version: "{{ DEP_CONSTRAINT }}"
