--- a/examples-generated/compute/sharedvpchostproject.yaml
+++ b/examples-generated/compute/sharedvpchostproject.yaml
@@ -8,37 +8,9 @@ metadata:
   name: host
 spec:
   forProvider:
-    project: host-project-id
-
----
-
-apiVersion: compute.gcp.upbound.io/v1beta1
-kind: SharedVPCServiceProject
-metadata:
-  annotations:
-    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
-  labels:
-    testing.upbound.io/example-name: service1
-  name: service1
-spec:
-  forProvider:
-    hostProject: host-project-id
-    serviceProject: service-project-id-1
-
----
-
-apiVersion: compute.gcp.upbound.io/v1beta1
-kind: SharedVPCServiceProject
-metadata:
-  annotations:
-    meta.upbound.io/example-id: compute/v1beta1/sharedvpchostproject
-  labels:
-    testing.upbound.io/example-name: service2
-  name: service2
-spec:
-  forProvider:
-    hostProject: host-project-id
-    serviceProject: service-project-id-2
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
 
 ---
 
