Add location as a parameter to the external name and fix the example for google_certificate_manager_certificate

--- a/examples/certificatemanager/certificate.yaml
+++ b/examples/certificatemanager/certificate.yaml
@@ -9,13 +9,14 @@ metadata:
   name: default
 spec:
   forProvider:
+    location: global
     description: The default cert
     scope: DEFAULT
     managed:
     - dnsAuthorizations:
       - projects/official-provider-testing/locations/global/dnsAuthorizations/default
       domains:
-      - hashicorptest.com
+      - subdomain.hashicorptest.com
 
 ---
 
@@ -30,4 +31,4 @@ metadata:
 spec:
   forProvider:
     description: The default dnss
-    domain: hashicorptest.com
+    domain: subdomain.hashicorptest.com
