--- a/cluster/images/provider-gcp/Makefile
+++ b/cluster/images/provider-gcp/Makefile
@@ -68,7 +68,7 @@ batch-process: $(UP)
 		--platform $(BATCH_PLATFORMS) \
 		--provider-name $(PROJECT_NAME) \
 		--family-package-url-format $(XPKG_REG_ORGS)/%s:$(VERSION) \
-		--package-repo-override monolith=$(PROJECT_NAME) --package-repo-override config=provider-family-$(CSP) \
+		--package-repo-override monolith=$(PROJECT_NAME) --package-repo-override config=provider-family-$(PROVIDER_NAME) \
 		--provider-bin-root $(OUTPUT_DIR)/bin \
 		--output-dir $(XPKG_OUTPUT_DIR) \
 		--store-packages $(STORE_PACKAGE) \
@@ -77,7 +77,7 @@ batch-process: $(UP)
 		--examples-group-override monolith=* --examples-group-override config=providerconfig \
 		--auth-ext $(ROOT_DIR)/package/auth.yaml \
 		--crd-root $(ROOT_DIR)/package/crds \
-		--crd-group-override monolith=* --crd-group-override config=$(CSP) \
+		--crd-group-override monolith=* --crd-group-override config=$(PROVIDER_NAME) \
 		--package-metadata-template $(ROOT_DIR)/package/crossplane.yaml.tmpl \
 		--template-var XpkgRegOrg=$(XPKG_REG_ORGS) --template-var DepConstraint="$(DEP_CONSTRAINT)" \
 		--concurrency $(CONCURRENCY) \
