Test uptest PR 110
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/.github/workflows/publish-service-artifacts.yml
+++ b/.github/workflows/publish-service-artifacts.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   publish-service-artifacts:
-    uses: upbound/uptest/.github/workflows/provider-publish-service-artifacts.yml@main
+    uses: ulucinar/uptest/.github/workflows/provider-publish-service-artifacts.yml@fix-ssop
     with:
       subpackages: ${{ github.event.inputs.subpackages }}
       version: ${{ github.event.inputs.version }}
